* Added tests for selectors